[gd_scene load_steps=8 format=3 uid="uid://ce0fyafaupkhg"]

[ext_resource type="Script" uid="uid://cff02ul8i74cw" path="res://Objects/Box/heavy_box.gd" id="1_lrl7b"]
[ext_resource type="Script" uid="uid://dxmffxw51dhku" path="res://Loop/loopable.gd" id="1_sn3pl"]
[ext_resource type="Texture2D" uid="uid://dxeeysjtyvdsq" path="res://Objects/Box/steelbox.png" id="3_lrl7b"]
[ext_resource type="Texture2D" uid="uid://byfgjd8fnkjxd" path="res://Objects/Box/boxoutline.png" id="4_rrdgm"]
[ext_resource type="AudioStream" uid="uid://biy6pjsoqkpnm" path="res://Audio/Sounds/LoopSelect.wav" id="5_j5qce"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrdgm"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5qce"]
size = Vector2(32, 32)

[node name="HeavyBox" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 23
script = ExtResource("1_lrl7b")

[node name="Loopable" type="Node" parent="." node_paths=PackedStringArray("properties")]
script = ExtResource("1_sn3pl")
properties = {
NodePath(".."): ["position", "rotation", "visible", "velocity"],
NodePath("../CollisionShape2D"): ["disabled"],
NodePath("../ClickArea/CollisionShape2D"): ["disabled"]
}
metadata/_custom_type_script = "uid://dxmffxw51dhku"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rrdgm")

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("RectangleShape2D_j5qce")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_lrl7b")

[node name="Outline" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_rrdgm")

[node name="SelectSF" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_j5qce")
volume_db = -20.0
bus = &"Sounds"

[connection signal="playback_ended" from="Loopable" to="." method="_on_loopable_playback_ended"]
[connection signal="playback_started" from="Loopable" to="." method="_on_loopable_playback_started"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
